--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,9 +18,9 @@ import Contact from '../components/sections/Contact.astro';
     <section id="projects">
       <Projects client:visible />
     </section>
-    <!-- <section id="writings">
+    <section id="writings">
       <Writings client:visible />
-    </section> -->
+    </section>
     <section id="contact">
       <Contact />
     </section>
