--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,6 +5,9 @@ import { initializeMouseTracking } from '../utils/mouseTracker';
 import PageTransition from '../components/PageTransition';
 import CustomCursor from '../components/CustomCursor';
 import ScrollProgress from '../components/ScrollProgress';
+import NavIndicator from '../components/NavIndicator';
+import DynamicBackground from '../components/DynamicBackground';
+import { useSmoothScroll } from '../hooks/useSmoothScroll';
 
 interface Props {
   title: string;
@@ -28,6 +31,8 @@ const { title } = Astro.props;
     <PageTransition client:load />
     <CustomCursor client:load />
     <ScrollProgress client:load />
+    <NavIndicator client:load />
+    <DynamicBackground client:load />
 
     {/* Dynamic Background */}
     <div class="fixed inset-0 -z-10 will-change-transform">
@@ -55,6 +60,7 @@ const { title } = Astro.props;
       import { gsap } from 'gsap';
 
       gsap.registerPlugin(ScrollTrigger);
+      useSmoothScroll();
 
       // Optimized scroll animations with debouncing
       const sections = gsap.utils.toArray('.fade-in-section');
